Terminada la funcionalidad de obtener respuesta previa según el n'umero de intento
