# storage/api-docs/api-docs.json
@@ -121,7 +121,7 @@
                     "200": {
                         "description": "Game info"
                     },
-                    "400": {
+                    "403": {
                         "description": "Duplicate value in combination or duplicate combination"
                     },
                     "404": {
@@ -129,6 +129,53 @@
                     },
                     "408": {
                         "description": "Game over"
+                    },
+                    "default": {
+                        "description": "An error occurred"
+                    }
+                }
+            }
+        },
+        "/api/game/previewResponse": {
+            "post": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Get a preview response",
+                "operationId": "eaa60b20952ea4429705d767ca14caaa",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "attempt",
+                                    "id"
+                                ],
+                                "properties": {
+                                    "attempt": {
+                                        "description": "attempt number",
+                                        "type": "integer"
+                                    },
+                                    "id": {
+                                        "description": "Game id",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Game info"
+                    },
+                    "403": {
+                        "description": "There is no information for attempt"
+                    },
+                    "404": {
+                        "description": "Game not found"
                     },
                     "default": {
                         "description": "An error occurred"
